# muluop

./: .bazelignore  .bazeliskrc  .bazelrc  .buckconfig  .env  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  Untitled.ipynb  WORKSPACE.bazel  package-lock.json  package.json
.github/workflows/: ci.yml
buck2-re/: buildbuddy.app.yaml  buildbuddy.executor.yaml  compose.yml
remote_executor/: buildbuddy.executor.yaml  compose.yml
src/: BUCK  BUILD.bazel  lib_test.py  mu_info.py  torch_info.py  torch_test.py
src/cpp/: BUILD.bazel  hello_test.cpp
src/go/: BUILD.bazel
src/python/: BUILD.bazel  lib_test.py  sim_test.py  test_dummy.py  torch_info.py
src/rust/: BUILD.bazel  hello_test.rs
tests/: BUCK  defs.bzl  test_dummy.py  test_imports.py
tests/python/: pytest_main.py  test_imports.py
toolchains/: BUCK
tools/: BUCK  BUILD.bazel
tools/jupyter/: BUILD.bazel  defs.bzl  kernel_wrapper.py  wrapper.py
tools/jupyter/kernels/buck2/: kernel.json
