module(
    name = "muluop",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_py", version = "1.6.6")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "rules_rust", version = "0.48.0")
bazel_dep(name = "rules_nodejs", version = "6.6.2")
bazel_dep(name = "aspect_rules_ts", version = "1.4.0")
bazel_dep(name = "aspect_rules_js", version = "1.39.0")


# Python 3.11 + cuda 12.8 for compute
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# 1. Compute Repo (Torch + CUDA)
# Note: Index URLs are read from requirements.lock.cu128.txt file
# The requirements file should include --index-url and --extra-index-url directives
pip.parse(
    hub_name = "pip_compute",
    python_version = "3.11",
    requirements_lock = "//:third_party/python/requirements.lock.cu128.txt",
)

# 2. Sim Repo (Standard)
# Note: Index URLs are read from requirements.lock.sim.txt file
pip.parse(
    hub_name = "pip_sim",
    python_version = "3.11",
    requirements_lock = "//:third_party/python/requirements.lock.sim.txt",
)


use_repo(pip, "pip_compute", "pip_sim")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.80.0"],
)
use_repo(rust, "rust_toolchains")


